*******************************************************************************
Version 1.6.7
*******************************************************************************

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* upnp/src/ssdp/ssdp_device.c: Fix for IPV6 ULA/GUA issues.
	* upnp/src/ssdp/ssdp_ctrlpt.c: Fix for IPV6 ULA/GUA issues.
	* upnp/src/ssdp/ssdp_server.c: Fix for IPV6 ULA/GUA issues.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* upnp/src/genlib/miniserver/miniserver.c: Fix for IPV6 ULA/GUA issues.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* gena_subscribe(): Fix for IPV6 ULA/GUA issues.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* SOCKET ssdpSock6UlaGua: created variable for later use.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* SSDP_IPV6_SITELOCAL: new macro.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* The scope of the macro NUM_HANDLE is now restricted to upnpapi.c.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* InitHandleList() has never been implemented, I guess no one has ever
	called it, so remove it.
	* GetFreeHandle() and FreeHandle() are now static as they should.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* New internal buffer added to store global/ula IPV6 address.
	* Macros to test whether an IPV6 address is global or ula.
	* UpnpGetServerUlaGuaIp6Address(): added interface.
	* IN6_IS_ADDR_GLOBAL, IN6_IS_ADDR_ULA: new macros.
	* gIF_IPV6_ULA_GUA: new buffer.
	* UpnpRegisterRootDevice3(): Change to the test of already registered
	devices for IPV6.
	* UpnpGetIfInfo(): gua/ula issues.
	
	Patch submitted by Ronan Menard.

2010-08-19 Marcelo Jimenez <mroberto(at)users.sourceforge.net>